--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <canvas id="gameBoard"></canvas>
-        <script src="app.js"></script>
         <script src="Snake.js"></script>
+        <script src="Panel.js"></script>
+        <script src="Board.js"></script>
+        <script src="app.js"></script>
     </body>
 </html>
