--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <title>
             Snake Game
         </title>
-        <link href="./style.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
         <canvas id="gameBoard"></canvas>
-        <script src="Snake.js"></script>
-        <script src="Panel.js"></script>
-        <script src="Board.js"></script>
-        <script src="app.js"></script>
+        <script src="js/Fruit.js"></script>
+        <script src="js/Snake.js"></script>
+        <script src="js/Panel.js"></script>
+        <script src="js/Board.js"></script>
+        <script src="js/app.js"></script>
     </body>
 </html>
